--- a/web-data-viz/public/assets/styles/analiseDados.css
+++ b/web-data-viz/public/assets/styles/analiseDados.css
@@ -5,7 +5,7 @@
     font-style: normal;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -16,7 +16,7 @@
 
 
 /* BARRA LATERAL */
-.menu{
+.menu {
     display: flex;
     align-items: center;
     gap: 2vw;
@@ -26,13 +26,13 @@
     z-index: 1000;
 }
 
-.nav-burger{
+.nav-burger {
     display: none;
     cursor: pointer;
     margin-top: 5vw;
 }
 
-.nav-burger div{
+.nav-burger div {
     height: 1vw;
     width: 9vw;
     background-color: rgb(255, 255, 255);
@@ -40,32 +40,33 @@
     transition: 0.7s;
 }
 
-.nav-active{
+.nav-active {
     transform: translateX(0%);
     transition: 1s;
-           
+
 }
 
 /*  */
-.linha1-active{
+.linha1-active {
     transform: rotate(44deg);
-    transition: 0.7s;  
+    transition: 0.7s;
     cursor: pointer;
 }
 
-.linha3-active{
+.linha3-active {
     transform: rotate(360deg);
     transition: 0s;
     opacity: 0%;
     cursor: pointer;
 }
 
-.linha2-active{
-    transform:rotate(-60deg);
+.linha2-active {
+    transform: rotate(-60deg);
     transition: 0.7s;
     transform: translateY(-1vw) rotate(135deg);
     cursor: pointer;
 }
+
 /*  */
 
 .nav-burger {
@@ -80,24 +81,24 @@
     margin: 0;
 }
 
-.nav-links{
+.nav-links {
     display: flex;
     flex-direction: column;
     gap: 5vw;
 
-    & span{
+    & span {
         display: none;
     }
-    
+
 }
 
-.nav-links li i{
+.nav-links li i {
     font-size: 12vw;
 }
 
 
- /* cabecalho */
-.dashHistorica{
+/* cabecalho */
+.dashHistorica {
     display: flex;
     flex-direction: column;
     width: 94vw;
@@ -106,11 +107,11 @@
     gap: 12px;
 }
 
-.cabecalho{
+.cabecalho {
     display: flex;
     gap: 20px;
     margin-top: 1vh;
-    background-color:#F5F1F1;
+    background-color: #F5F1F1;
     padding: 10px;
     border-radius: 10px;
     height: 9vh;
@@ -118,12 +119,12 @@
     box-shadow: 5px 2px 10px rgb(161, 160, 160);
 }
 
-.empresa{
+.empresa {
     display: flex;
     gap: 15px;
 }
 
-.txtInfo{
+.txtInfo {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -133,7 +134,7 @@
     font-weight: bolder;
 }
 
-.circuloEmp{
+.circuloEmp {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -143,19 +144,19 @@
     height: 8vh;
 }
 
-.bxs-business{
+.bxs-business {
     font-size: 3vw;
     color: black;
 }
 
-.perfil{
+.perfil {
     display: flex;
     margin-left: 37vw;
     gap: 15px;
     align-items: center;
 }
 
-.perfil .txtInfo{
+.perfil .txtInfo {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
@@ -163,15 +164,15 @@
     width: 20vw;
 }
 
-#serv{
-    color:#ffffff; 
+#serv {
+    color: #ffffff;
     background-color: #2C3E50;
     border-radius: 100%;
     padding: 0.2vw;
     transition: 0.3s;
 }
 
-#serv:hover{
+#serv:hover {
     cursor: pointer;
     transform: scale(1.05);
     transition: 0.3s;
@@ -179,7 +180,7 @@
 
 /* Painel dashs */
 
-.painelDash{
+.painelDash {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -187,11 +188,11 @@
     width: 90vw;
     padding: 10px;
     border-radius: 10px;
-    height: 107vh;
+    height: 117vh;
     box-shadow: 5px 2px 10px rgb(161, 160, 160);
 }
 
-.cabecalhoDash{
+.cabecalhoDash {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -199,21 +200,72 @@
     padding: 5px;
     border-radius: 10px;
     height: 8vh;
+    margin-left: 1vw;
+}
+
+.tituloDash {
+    display: flex;
+    gap: 1vw;
+    align-items: center;
+}
+
+.sltInvisivel {
+    position: relative;
+    width: 100px;
+    border-bottom: 2px solid black;
+    font-family: Arial, sans-serif;
+    transition: 0.3s ease;
+
+}
+
+.sltInvisivel select {
+    appearance: none;
+    /* Remove o estilo padrão */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: none;
+    background: transparent;
+    width: 100%;
+    padding: 5px 25px 5px 0;
+    font-size: 27px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.sltInvisivel:hover {
+    transform: scale(1.05);
+    transition: 0.3s ease;
+}
+
+.sltInvisivel::after {
+    content: '▼';
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 14px;
+    pointer-events: none;
 }
 
 
-.texto{
+.texto {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-#titulo{
+#titulo {
     font-size: 25px;
     font-weight: bold;
 }
 
-div .servidor{
+#dataInfo{
+    display: flex;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+div .servidor {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -221,95 +273,142 @@ div .servidor{
     font-size: 30px;
 }
 
-div .servidor select{
+.sltRoxo {
     font-family: 'Montserrat';
     font-weight: 600;
     background-color: #2C3E50;
     color: #FFFF;
     border: none;
     border-radius: 12px;
+    height: 4vh;
     padding: 0 4vw 0 4vw;
 }
 
-div .servidor select:hover{
+.sltRoxo:hover {
     cursor: pointer;
 }
 
-/* GRAFS */
-canvas {
-    width: 100% !important;
-    height: 100% !important;
+#titulo .sltRoxo {
+    height: 3vh;
+    width: 3vw;
+    padding: 0 0vw 0 0vw;
+
 }
 
-.kpisUso{
-    margin-top: 2vh;
+/* GRAFS */
+.graficos {
+    display: flex;
+    gap: 3vw;
+    margin-left: 1vw;
+}
+
+.grafBox {
+    background: white;
+    border-radius: 12px;
+    width: 41vw;
+    padding: 15px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.grafContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.predicao {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+}
+
+.tituloPred{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.escolha{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.predicao select {
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+}
+
+.kpis {
     display: flex;
     justify-content: center;
     gap: 4vw;
+    margin-top: 2vh;
 }
 
-.kpiUso{
+.kpiIdv {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background: #012027;
     background: linear-gradient(270deg, #012027, #04708D);
     border-radius: 12px;
     padding: 1vw;
-    width: 25vw;
-    height: 14vh;
-    font-size: 18px;
+    width: 17vw;
+    height: 10vh;
     color: #fffafa;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
     font-weight: bold;
-    gap: 5px;
+    gap: 8px;
+
 }
 
-.tituloKpi{
+.titulokpiIdv {
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.kpiUso h2{
+.kpiIdv h2 {
     font-size: 17px;
 }
-.kpiUso h3{
+
+.kpiIdv h3 {
     font-size: 13px;
     font-weight: bolder;
     display: flex;
     gap: 5px;
 }
 
-.dadoKpi{
+.dadoKpi {
     font-size: 35px;
 }
 
-.grafSuperior{
+.grafSuperior {
     display: flex;
     gap: 2vw;
     margin-top: 2vh
 }
 
-.chartCabecalho{
-    display: flex;
-    justify-content: space-between;    
-}
 
-.filtrar{
+
+.filtrar {
     display: flex;
     align-items: center;
-    color: white;
     gap: 10px;
 }
 
-.filtrar h3{
+.filtrar h3 {
     font-size: 14px;
     font-weight: 200;
 }
 
-.iconeFiltro{
+.iconeFiltro {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -319,7 +418,7 @@ canvas {
     transition: 0.3s;
 }
 
-.iconeFiltro:hover{
+.iconeFiltro:hover {
     cursor: pointer;
     transform: scale(1.1);
     transition: 0.3s;
@@ -327,25 +426,11 @@ canvas {
 
 }
 
-.chart-container-blue{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background: #012027;
-    background: linear-gradient(270deg, #012027, #04708D);
-    border-radius: 12px;
-    padding: 1vw;
-    width: 30vw;
-    height: 30vh;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
-}
 
-.chart-container-blue h2{
-    color: white;
-    font-weight: 100;
-}
 
-.kpisTempo{
+
+
+.kpisTempo {
     display: flex;
     flex-direction: column;
     gap: 2vh;
@@ -353,7 +438,7 @@ canvas {
 
 
 
-.kpiTempo{
+.kpiTempo {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -372,17 +457,17 @@ canvas {
 
 }
 
-.kpiTempo h2{
+.kpiTempo h2 {
     font-size: 18px;
 }
 
-.branco{
+.branco {
     background: none;
     background-color: #fcfcfc;
     color: black;
 }
 
-.txtKpi{
+.txtKpi {
     display: flex;
     gap: 5px;
     font-size: 25px;
@@ -391,56 +476,21 @@ canvas {
 
 
 /* GRAFS INFERIOR */
-.grafInferior{
-    display: flex;
-    gap: 2vw;
-}
-
-.chart-container-white{
+.grafInferior {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    background-color: #fcfcfc;
-    border-radius: 12px;
-    padding: 1vw;
-    width: 28vw;
-    height: 31vh;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
-
-}
-.chart-container-white h2{
-    color: black;
-    font-weight: 100;
+    align-items: center;
+    margin-left: 1vw;
 }
 
-.chart-container-white .filtrar{
-    color: black;
-}
-
-.chart-container-alert{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #fcfcfc;
-    border-radius: 12px;
-    padding: 1vw;
-    width: 25vw;
-    height: 31vh;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+.grafInferior .grafBox {
+    width: 50vw;
 
 }
-.chart-container-alert h2{
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-    color: black;
-    font-weight: 100;
-    font-size: 18px;
-}
 
-.chart-container-alert .filtrar{
-    color: black;
-}
+
+
+
 
 
 /* MODAL */
@@ -450,8 +500,8 @@ canvas {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-  }
-  
+}
+
 .containerPeriodo {
     margin: 2.5% 0;
     display: flex;
@@ -461,7 +511,7 @@ canvas {
     text-align: start;
     gap: 5px;
 }
-  
+
 .containerVisualizacao {
     margin: 2.5% 0;
     display: flex;
@@ -472,7 +522,7 @@ canvas {
     line-height: 30px;
     gap: 5px;
 }
-  
+
 .alertaModal {
     background-color: #d9d9d9;
     border-radius: 10px;
@@ -480,12 +530,12 @@ canvas {
     color: black;
 }
 
-.labelSlt{
+.labelSlt {
     display: flex;
     gap: 10px;
 }
 
-#sltFiltrar{
+#sltFiltrar {
     text-align: center;
     font-family: 'Montserrat';
     font-weight: 600;
@@ -497,15 +547,15 @@ canvas {
     height: 3vh;
 }
 
-#sltFiltrar:hover{
+#sltFiltrar:hover {
     cursor: pointer;
 }
 
-.labelSlt{
+.labelSlt {
     display: flex;
 }
 
-.iptFiltrar{
+.iptFiltrar {
     text-align: center;
     font-family: 'Montserrat';
     font-weight: 600;
@@ -519,127 +569,135 @@ canvas {
 
 
 /* MEDIA MENU LATERAL FUNCIONAR */
-@media only screen and (min-width:702px) { 
+@media only screen and (min-width:702px) {
 
-.menu{
-    
-    width: 5%;
-    height: 100vh;
-    position: fixed;
-    left: 0;
-}
-body{
-    grid-template-columns: 5% 95% ;
-}
+    .menu {
 
-.nav-links{
-    gap: 4vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    /* transition: all 1s; */
-    & li i{
-        font-size: 40px;
+        width: 5%;
+        height: 100vh;
+        position: fixed;
+        left: 0;
     }
-    & span{
+
+    body {
+        grid-template-columns: 5% 95%;
+    }
+
+    .nav-links {
+        gap: 4vh;
+        width: 100%;
+        display: flex;
+        align-items: center;
+
+        /* transition: all 1s; */
+        & li i {
+            font-size: 40px;
+        }
+
+        & span {
+            display: none;
+        }
+
+        & ul {
+            width: 100%;
+        }
+
+        & li {
+            position: relative;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+
+
+    }
+
+    .nav-links-expanded .li-active::after {
+        /* display: none; */
+        width: 90% !important;
+        left: 0 !important;
+    }
+
+    .nav-links .li-active::after {
+        width: 70%;
+        position: absolute;
+        content: "";
+        bottom: -20%;
+        left: 15%;
+        border-radius: 2px;
+
+
+        background-color: #007BFF;
+        height: 3.5px;
+    }
+
+    .nav-burger div {
+        height: 0.49vw;
+        width: 2.9vw;
+        background-color: rgb(255, 255, 255);
+        margin: 0.5vw;
+        transition: 0.7s;
+    }
+
+    .nav-burger {
+        margin-top: 2vh;
+    }
+
+    .nav-links-expanded {
+        /* animation: expandir 10s linear; */
+        margin-left: 5px;
+
+        & li {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 1em;
+
+            & span {
+                color: #fff;
+                font-family: 'Montserrat';
+                font-size: 1.5vw;
+                font-weight: 550;
+                display: flex;
+            }
+        }
+    }
+
+    .menu-expand {
+        width: 20%;
+        display: flex;
+        align-items: flex-start;
+        /* padding: 20px; */
+
+    }
+
+
+
+    .oculta {
         display: none;
     }
 
-    & ul{
-        width: 100%;
+
+}
+
+@keyframes expandir {
+    from {
+        width: 5%
     }
 
-    & li{
-        position: relative;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-    }
-
-    
-}
-
-.nav-links-expanded .li-active::after{
-    /* display: none; */
-    width: 90% !important;
-    left: 0 !important;
-}
-
-.nav-links .li-active::after{
-    width: 70%;
-    position: absolute;
-    content: "";
-    bottom: -20%;
-    left: 15%;
-    border-radius: 2px;
-    
-    
-    background-color: #007BFF;
-    height: 3.5px;
-}
-
-.nav-burger div{
-    height: 0.49vw;
-    width: 2.9vw;
-    background-color: rgb(255, 255, 255);
-    margin: 0.5vw;
-    transition: 0.7s;
-}
-
-.nav-burger{
-    margin-top: 2vh;
-}
-
-.nav-links-expanded{
-    /* animation: expandir 10s linear; */
-    margin-left: 5px;
-    & li{
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 1em;
-
-        & span{
-            color: #fff;
-            font-family: 'Montserrat';
-            font-size: 1.5vw;
-            font-weight: 550;
-            display: flex;
-        }
+    to {
+        width: 20%;
     }
 }
 
-.menu-expand{
-    width: 20%;
-    display: flex;
-    align-items: flex-start;
-    /* padding: 20px; */
+@keyframes diminui {
+    from {
+        width: 20%
+    }
 
-}
-
-
-
-.oculta{
-    display: none;
-}
-
-
-}
-
-@keyframes expandir{
-from{
-    width: 5%
-}to{
-    width: 20%;
-}
-}
-
-@keyframes diminui{
-from{
-    width: 20%
-}to{
-    width: 5%;
-}
+    to {
+        width: 5%;
+    }
 }
