--- a/web-data-viz/public/assets/styles/monitoramentoGestao Fabrica.css
+++ b/web-data-viz/public/assets/styles/monitoramentoGestao Fabrica.css
@@ -441,7 +441,7 @@
             margin-top: 20px;
             padding: 25px;
             background-color: #f8f9fa;
-            border-left: 5px solid #be9c00;
+            border-left: 5px solid #0b335c;
             box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
         
@@ -456,14 +456,16 @@
         .textovalor2 {
             font-size: 32px;
             font-weight: 700;
-            color: #cf8e00;
+            color: red;
             margin: 15px 0;
             text-shadow: 0 1px 2px rgba(0,0,0,0.1);
         }
+
+        
         
         .valorporServidor{
             font-size: 16px;
-            color: #666;
+            color: #000000;
             font-weight: 400;
         }
 
@@ -477,15 +479,29 @@
             background-color: white;
             padding: 15px;
         }
-        
-        .footer {
-            margin-top: 40px;
-            text-align: center;
-            font-size: 14px;
-            color: #888;
-            padding: 20px 0;
-            border-top: 1px solid #ddd;
+
+        .heat-indicator {
+          display: flex;
+          flex-direction:column;
+          
+          align-items: center;
         }
+
+        .heat-bar {
+          width: 20px;
+          height: 100px;
+          background: linear-gradient(to bottom, yellow, red);
+          
+          
+}
+
+.label-top,
+.label-bottom {
+  font-size: 12px;
+  color: #000000;
+  font-weight: bold;
+}
+        
         
         .stat-item {
             display: flex;
