--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -315,7 +315,7 @@ body {
   width: 25vw;
   height: fit-content;
   font-size: 18px;
-  color: #04708d;
+  color: black;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   font-weight: bold;
   gap: 5px;
@@ -340,6 +340,7 @@ body {
 
 .dadoKpi {
   font-size: 35px;
+  color: #04708d;
 }
 
 #graficoAlertaFabricas {
@@ -410,7 +411,7 @@ body {
 }
 
 .informaçõesFábrica {
-  color: #04708d;
+  color: black;
   font-weight: 700;
   background: white;
   border-radius: 7px;
@@ -447,6 +448,10 @@ body {
 }
 
 .areaPredicao {
+  color: black;
+}
+
+#cliqueAqui {
   color: #04708d;
 }
 
