--- a/web-data-viz/public/assets/styles/monitoramentoGestaoInfra.css
+++ b/web-data-viz/public/assets/styles/monitoramentoGestaoInfra.css
@@ -196,7 +196,7 @@
     display: flex;
     gap: 20px;
     margin-top: 1vh;
-    background-color: #F5F1F1;
+    background-color: #ffffff;
     padding: 10px;
     border-radius: 10px;
     height: 9vh;
@@ -292,8 +292,8 @@
 
    .tabs {
             display: flex;
-            margin-left: 10%;
-            margin-right: 10%;
+            margin-left: 24%;
+            margin-right: 18%;
             margin-top: 2%;
             justify-content: center;
             margin-bottom: 30px;
@@ -301,7 +301,7 @@
             background-color: white;
             border-radius: 50px;
             padding: 5px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+              box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
         }
         
         .tab {
@@ -355,7 +355,7 @@
         /*grafico 1*/
 
         .dashboard-lista {
-          margin-left: 8%;
+          margin-left: 6%;
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 25px;
@@ -364,9 +364,8 @@
         .cartao{
             background-color: white;
             border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.07);
-            padding: 25px;
-            
+              box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+            padding: 15px;
             display: flex;
             flex-direction: column;
         }
@@ -393,10 +392,22 @@
             border-bottom: 1px solid #eee;
 
         }
+
+        h3.cartao-titulo2{
+          margin-top: 1%;
+           font-size: 18px;
+            font-weight: 700;
+            margin-bottom: 3px;
+            color: #000000;
+      
+            padding-bottom: 3px;
+            border-bottom: 1px solid #eee;
+
+        }
         
         table {
             width: 100%;
-            
+    
             margin-top: 10px;
         }
         
@@ -429,21 +440,27 @@
         }
 
         .caixasumario {
-            margin-top: 20px;
-             margin-bottom: 20px;
+             margin-top: 20px;
             padding: 25px;
-            background-color: #f8f9fa;
-            border-left: 5px solid #0b335c;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+            background-color: #ffffff;
+            border-bottom: 5px solid #04708d;
+            border-radius: 12px;
+            box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
         }
 
         .caixasumario2 {
+          display: flex;
+          flex-direction: column;
             margin-top: 20px;
-            padding: 25px;
-            background-color: #f8f9fa;
-            border-left: 5px solid #0b335c;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+            align-items: center;
+            padding: 2%;
+            background-color: #ffffff;
+            border-bottom: 5px solid #04708d;
+            border-radius: 12px;
+            box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
         }
+
+        
         
         .textovalor {
             font-size: 32px;
@@ -454,10 +471,12 @@
         }
 
         .textovalor2 {
+          display: flex;
+          flex-direction: column;
             font-size: 32px;
             font-weight: 700;
-            color: red;
-            margin: 15px 0;
+            color: #ac1100;
+          
             text-shadow: 0 1px 2px rgba(0,0,0,0.1);
         }
 
@@ -490,7 +509,7 @@
         .heat-bar {
           width: 20px;
           height: 100px;
-          background: linear-gradient(to bottom, yellow, red);
+          background: linear-gradient(to bottom, #0b335c, red);
           
           
 }
@@ -530,6 +549,9 @@
         }
 
 
+        .body{
+          background-color: #F5F1F1;
+        }
 
 
 
