--- a/web-data-viz/public/assets/styles/componentes.css
+++ b/web-data-viz/public/assets/styles/componentes.css
@@ -367,6 +367,25 @@
     transition: 0.2s;
 }
 
+.btn-editar{
+    text-align: center;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    background-color: #f1d792;
+    color: black;
+    border: none;
+    border-radius: 12px;
+    width: 5vw;
+    height: 3vh;
+    transition: 0.2s;
+}
+
+.btn-editar:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: 0.2s;
+}
+
 .btn-add{
     margin-top: 2vh;
     display: flex;
@@ -456,43 +475,30 @@
 }
 
 
-/* .addModal {
-    border-radius: 25px !important;
-    padding: 0 !important;
-    width: 25vw;
-    height: 55vh;
-}
-
-.modal-content{
+.modal-test {
     display: flex;
-    margin-top: 2vh;
-    flex-direction:column;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    height:16vw;
-    background-color:rgb(235, 234, 234);
-    padding:20px;
-    color: black;
-    gap: 5px;
-    
-}
-
-.infosCadastro{
-    display: flex;
-    gap: 10px;
-    border-bottom: 2px solid black;
-    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-#infoUltimo{
-    border-bottom: none;
+.containerCadastroComp {
+    height: inherit;
+    margin: 2.5% 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: start;
+    gap: 30%;
 }
 
-.label{
-    font-size: 17px;
-    font-weight: bold;
-} */
+.containerCadastroComp label {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
 
 .sltsCad{
     font-family: 'Montserrat', sans-serif;
